--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <a href="Branje.html"><img src="spletna stran - slike/plakat_fin_Preview.jpg" class="slika1"></a>
         </div>
         <div class="images3">
-            <a href="Kultura.html"><img src="spletna stran - slike/Plakat_Tisk.png" class="slika6"></a>
+            <a href="Kultura.html"><img src="spletna stran - slike/Plakat_Zirija.png" class="slika6"></a>
             <a href="Sonic_remnants.html">
                 <video autoplay loop muted playsinline class="slika4">
                     <source src="spletna stran - slike/Animacija_za_glasbo_1.mp4" type="video/mp4">
