--- a/Kultura.html
+++ b/Kultura.html
@@ -26,7 +26,7 @@
     </div>
     <div class="Branje_slike">
         <a href="Kultura.html">
-            <img src="spletna stran - slike/Plakat_Tisk.jpg " class="katalog">
+            <img src="spletna stran - slike/Plakat_Zirija.jpg " class="katalog">
         </a>
     </div>
     <footer>
