--- a/Misel.html
+++ b/Misel.html
@@ -29,7 +29,7 @@
     <div class="Misel_slike">
         <a href="Misel.html">
             <video autoplay loop muted playsinline class="slika4">
-                <source src="spletna stran - slike/Juš_Pustoslemšek-MISEL.mp4" type="video/mp4">
+                <source src="spletna stran - slike/Juš_Pustoslemšek-MISEL1.mp4" type="video/mp4">
                 Vaš brskalnik ne podpira video elementa.
             </video>
         </a>
