--- a/Sonic_remnants.html
+++ b/Sonic_remnants.html
@@ -24,7 +24,7 @@
         <p>As part of my diploma thesis, I created an abstract animation designed as a visual interpretation of music. 
             The three-minute animation is crafted to visually mimic and enhance musical elements. 
             My project was also recognized at the international design competition Graphis, where it received a gold award.
-            The animation with sound can be viewed at: https://www.youtube.com/watch?v=aeJvkrpcGqc.
+            The full animation can be viewed at: https://www.youtube.com/watch?v=aeJvkrpcGqc.
         </p>
     </div>
     <div class="Misel_slike">
