--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Website Title</title>
+    <title>Juš Pustoslemšek</title>
     <link rel="stylesheet" href="koda.css">
     <script src="resize.js" defer></script>
 </head>
@@ -12,7 +12,7 @@
         <nav>
             <ul>
                 <li class="first-link"><a href="index.html">Juš Pustoslemšek</a></li>
-                <li class="second-link"><a href="about.html">About</a></li>  
+                <li class="second-link"><a href="About.html">About</a></li>  
             </ul>
         </nav>
     </header>
